--- a/stages/prod/configmap.yaml
+++ b/stages/prod/configmap.yaml
@@ -7,11 +7,11 @@ data:
     <!DOCTYPE html>
     <html>
     <head>
-    <title>prod</title>
+    <title>production</title>
     </head>
     <body>
 
-    <h1>prod</h1>
+    <h1>production</h1>
 
     </body>
     </html>
