--- a/stages/development/configmap.yaml
+++ b/stages/development/configmap.yaml
@@ -7,11 +7,11 @@ data:
     <!DOCTYPE html>
     <html>
     <head>
-    <title>uat</title>
+    <title>development</title>
     </head>
     <body>
 
-    <h1>uat</h1>
+    <h1>development</h1>
 
     </body>
     </html>
